Changes done to layout

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,8 @@
 ################################################################################
 
 /.vs
+/PawsClaws/.vs/PawsClaws/v16/Server/sqlite3/db.lock
+/PawsClaws/.vs/PawsClaws/v16/Server/sqlite3/storage.ide
+/PawsClaws/.vs/PawsClaws/v16/Server/sqlite3/storage.ide-shm
+/PawsClaws/.vs/PawsClaws/v16/Server/sqlite3/storage.ide-wal
+/PawsClaws/.vs/PawsClaws/v16/.suo
