Ignore the .vs directory in the main project directory

--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@
 /PawsClaws/.vs/PawsClaws/v16/Server/sqlite3/storage.ide-shm
 /PawsClaws/.vs/PawsClaws/v16/Server/sqlite3/storage.ide-wal
 /PawsClaws/.vs/PawsClaws/v16/.suo
+/PawsClaws/.vs/
