--- a/PawsClaws/PawsClaws.csproj
+++ b/PawsClaws/PawsClaws.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.2.0" PrivateAssets="All" />
+    <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Design" Version="2.1.10" />
     <PackageReference Include="MySql.Data" Version="8.0.18" />
     <PackageReference Include="MySql.Data.EntityFramework" Version="8.0.18" />
     <PackageReference Include="MySql.Data.EntityFrameworkCore" Version="8.0.18" />
