IMAGE SUPPORT. When creating a new pet, one or more images of said pet can now be uploaded. Supports .png and .jpg. You can see some of my tests using photos of Jeb Bush.
-Todo: display the images on the pets page
-Todo: delete image directories when pets are deleted
-Todo: possibly add a reference string to the database? I looked into this but it's kinda complex, and the way I structured the directories should make things easy enough to find without modifying the database schema.

--- a/PawsClaws/appsettings.json
+++ b/PawsClaws/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "PawsClawsContext": "Data Source = 74.194.249.158:1434; Server=COMPUTER\\SQLEXPRESS; Database=Paws&ClawsTestDB; User Id = PublicViewer; Trusted_Connection=True; MultipleActiveResultSets=true; Integrated Security = false;"
+    "PawsClawsContext": "Data Source = 74.194.249.158:1434; Server=COMPUTER\\SQLEXPRESS; Database=Paws&ClawsTestDB; User Id = PawsClawsTeam; Password = Paws&Claws4336; Trusted_Connection=True; MultipleActiveResultSets=true; Integrated Security = false;"
   }
 }
